examples/test/testpolicy7310.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7310
  namespace: namespace192
spec:
  podSelector:
    matchLabels:
      key45: value41
      key22: value19
      key13: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value14
          key25: value38
      podSelector:
        matchLabels:
          key33: value33
          key47: value21
          key29: value17
